k8s/base/ingress/ai-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-ingress
  namespace: shporaai
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: app.local
      http:
        paths:
          - path: /ai(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ai-service
                port:
                  number: 80
